[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vrc-profile-proof"
version = "0.1.0"
description = "Temporary proof of control for VRChat profiles using bio challenges"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["vrchat", "verification", "profile", "authentication", "identity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
vrc-profile-proof = "vrc_profile_proof.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vrc_profile_proof = ["py.typed"]
